[package]
name = "bookmark"
version = "2.0.0"
authors = ["Pierre Prinetti <pierreprinetti@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
